--- a/client/projects/core/tellma-core-ui/menu/tm-menu.css
+++ b/client/projects/core/tellma-core-ui/menu/tm-menu.css
@@ -34,7 +34,7 @@
   gap: var(--space-2);
   block-size: var(--menu-item-height);
   padding-inline: var(--space-3);
-  font-size: var(--font-size-sm);
+  font-size: var(--text-sm);
   color: var(--text-body);
   cursor: default;
   user-select: none;
